# fastapi-rest

./: .gitignore  README.md  base.py  crud.py  db.py  main.py  models.py  schemas.py  security.py  utils.py
project/: pyproject.toml
