[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Cr3cker <vladstar1606@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.41"
fastapi = "^0.82.0"
DateTime = "^4.6"
bcrypt = "^4.0.0"
passlib = "^1.7.4"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
